# rhizoCrypt

./: .doc-cleanup-summary.txt  .gitignore  .llvm-cov.toml  00_ROOT_INDEX.md  ARCHIVE_MOVED.md  AT_A_GLANCE.md  AUDIT_ACTION_CHECKLIST.md  AUDIT_AND_EVOLUTION_EXECUTIVE_SUMMARY.md  AUDIT_COMPLETE_DEC_24_2025.md  AUDIT_EXECUTIVE_SUMMARY.md  CHANGELOG.md  CLEANUP_AUDIT_JAN_9_2026.md  CODE_REVIEW_SESSION_JAN_9_2026.md  COMMIT_COMPLETE_DEC_24_2025.md  COMPREHENSIVE_AUDIT_JAN_9_2026_PART2.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_DEC_25_2025.md  COMPREHENSIVE_CODE_AUDIT_DEC_24_2025.md  CONTEXT.md  Cargo.toml  DEEP_DEBT_ANALYSIS.md  DEPLOY_NOW.md  DOCS_CLEANUP_COMPLETE.md  DOCS_INDEX.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_V0_13_0.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_UPDATE_DEC_28_2025.md  Dockerfile  ENV_VARS.md  EXECUTION_COMPLETE.md  EXECUTION_COMPLETE_DEC_24_2025.md  EXECUTION_COMPLETE_JAN_9_2026_FINAL.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_FINAL.md  FINAL_EXECUTION_SUMMARY_DEC_24_2025.md  FINAL_REPORT_DEC_28_2025.md  FINAL_SESSION_REPORT_DEC_24_2025.md  FINAL_STATUS_JAN_9_2026.md  (+54 more)
crates/rhizo-crypt-core/: Cargo.toml  README.md
crates/rhizo-crypt-core/benches/: dag_benchmarks.rs
crates/rhizo-crypt-core/fuzz/: Cargo.toml
crates/rhizo-crypt-core/fuzz/fuzz_targets/: fuzz_merkle_compute.rs  fuzz_session_builder.rs  fuzz_vertex_cbor.rs
crates/rhizo-crypt-core/src/: config.rs  config_tests.rs  constants.rs  dehydration.rs  dehydration_impl.rs  dehydration_wire.rs  discovery.rs  error.rs  error_tests.rs  event.rs  event_tests.rs  legacy_aliases.rs  lib.rs  merkle.rs  metrics.rs  niche.rs  niche_derived.rs  niche_derived_tests.rs  niche_tests.rs  primal.rs  rhizocrypt.rs  rhizocrypt_tests.rs  rhizocrypt_tests_branch_vertex.rs  rhizocrypt_tests_extended.rs  safe_env.rs  session.rs  session_tests.rs  slice.rs  slice_tests.rs  store.rs  store_redb.rs  store_redb_tests.rs  store_redb_tests_advanced.rs  store_redb_tests_coverage.rs  store_redb_tests_error_paths.rs  store_redb_tests_query.rs  store_redb_tests_stats.rs  store_rocksdb.rs  store_sled.rs  store_sled_tests.rs  (+8 more)
crates/rhizo-crypt-core/src/clients/: beardog.rs  beardog_http.rs  beardog_http_tests.rs  factory.rs  loamspine.rs  loamspine_http.rs  loamspine_http_tests.rs  loamspine_http_tests_wiremock.rs  loamspine_rpc.rs  mod.rs  nestgate.rs  nestgate_http.rs  nestgate_http_tests_wiremock.rs  resilience.rs  songbird.rs  songbird_rpc.rs  songbird_types.rs  sweetgrass.rs  toadstool.rs  toadstool_http.rs  toadstool_http_tests.rs
crates/rhizo-crypt-core/src/clients/adapters/: http.rs  mod.rs  tarpc.rs  unix_socket.rs
crates/rhizo-crypt-core/src/clients/capabilities/: compute.rs  mod.rs  parsing.rs  permanent.rs  (+5 more)
crates/rhizo-crypt-core/src/constants/: crypto.rs  ipc.rs  mesh.rs  methods.rs  mod.rs  network.rs
crates/rhizo-crypt-core/src/discovery/: capability.rs  endpoint.rs  manifest.rs  mod.rs  registry.rs  registry_tests.rs  resolution.rs
crates/rhizo-crypt-core/src/integration/: mocks.rs  mod.rs  traits.rs
crates/rhizo-crypt-core/src/rhizocrypt/: branch_ops.rs  dehydration_ops.rs  lifecycle.rs  mod.rs  vertex_ops.rs
crates/rhizo-crypt-core/src/safe_env/: capability.rs  mod.rs  tests.rs
crates/rhizo-crypt-core/src/testing/: chaos.rs  mod.rs
crates/rhizo-crypt-core/src/transport_tests/: connect.rs  endpoint.rs  errors.rs  family_btsp.rs  mod.rs  platform_hints.rs  socket_paths.rs
crates/rhizo-crypt-core/src/types_ecosystem/: compute.rs  mod.rs  provenance.rs
crates/rhizo-crypt-core/tests/: chaos_tests.rs  e2e_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/rhizo-crypt-core/tests/chaos/: concurrent_stress.rs  discovery_failures.rs  failure_injection.rs  mod.rs  network_partitions.rs  resource_exhaustion.rs
crates/rhizo-crypt-core/tests/common/: harness.rs  mod.rs
crates/rhizo-crypt-core/tests/e2e/: dag_operations.rs  dehydration_complete.rs  merkle_operations.rs  mod.rs  session_lifecycle.rs  slice_workflows.rs  witness_roundtrip.rs
crates/rhizo-crypt-rpc/: Cargo.toml
crates/rhizo-crypt-rpc/proptest-regressions/jsonrpc/: handler_proptests.txt
crates/rhizo-crypt-rpc/src/: client.rs  client_tests.rs  error.rs  histogram.rs  lib.rs  metrics.rs  metrics_tests.rs  prometheus.rs  rate_limit.rs  rate_limit_tests.rs  server.rs  service.rs  service_branch_ops.rs  service_tests.rs  service_types.rs  service_vertex_ops.rs  streaming.rs
crates/rhizo-crypt-rpc/src/btsp/: framing.rs  mod.rs  phase3.rs  server.rs  server_tests.rs  types.rs
crates/rhizo-crypt-rpc/src/jsonrpc/: handler.rs  handler_proptests.rs  handler_test_support.rs  handler_tests.rs  handler_tests_branching.rs  handler_tests_composition.rs  handler_tests_dehydrate.rs  handler_tests_gates.rs  handler_tests_mesh.rs  handler_tests_provenance.rs  handler_tests_validation.rs  method_gate.rs  method_gate_tests.rs  method_gate_tests_provider.rs  method_gate_verifier.rs  mod.rs  mod_tests.rs  newline.rs  types.rs  uds.rs  uds_tests.rs  uds_tests_btsp.rs  uds_tests_errors.rs  uds_tests_jsonrpc.rs  uds_tests_mito_beacon.rs  uds_tests_support.rs
crates/rhizo-crypt-rpc/tests/: rpc_integration.rs
crates/rhizocrypt-service/: Cargo.toml  README.md
crates/rhizocrypt-service/src/: client.rs  config.rs  discovery.rs  doctor.rs  lib.rs  lib_tests.rs  lib_tests_lifecycle.rs  lib_tests_startup.rs  main.rs  neural_api.rs  neural_api_tests.rs  shutdown.rs  startup.rs  uds.rs
crates/rhizocrypt-service/tests/: binary_integration.rs  service_integration.rs
crates/rhizocrypt-service/tests/service_integration/: client_and_config.rs  doctor.rs  mod.rs  uds.rs
showcase/00-local-primal/04-sessions/: Cargo.toml  README.md  demo-dehydration.sh  demo-ephemeral-persistent.sh  demo-session-lifecycle.sh  demo-slices.sh
showcase/00-local-primal/04-sessions/src/: demo_dehydration.rs  demo_ephemeral_persistent.rs  demo_session_lifecycle.rs  demo_slices.rs
showcase/02-rpc-layer/examples/: Cargo.toml  basic-client.rs  batch-operations.rs  merkle-proofs.rs  query-filtering.rs
(+258 files in other folders)
