[workspace]
resolver = "2"
members = [
    "crates/rhizo-crypt-core",
    "crates/rhizo-crypt-rpc",
    "crates/rhizocrypt-service",
]

[workspace.package]
version = "0.14.0-dev"
edition = "2024"
rust-version = "1.87"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/rhizoCrypt"
authors = ["ecoPrimals Project"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.46", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
ciborium = "0.2"
bytes = { version = "1.5", features = ["serde"] }
bincode = "1.3"

# Cryptography
blake3 = { version = "1.5", default-features = false, features = ["pure"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Identifiers
uuid = { version = "1.0", features = ["v7", "serde"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pure Rust RPC (tarpc) - compile-time type safety, no protobuf
tarpc = { version = "0.37", features = ["full"] }

# HTTP (axum for REST endpoints, hyper-util for outbound clients)
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"

# Concurrency
dashmap = "6.1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Embedded database (Pure Rust)
redb = "2.4"

# Test utilities
temp-env = "0.3"

[workspace.lints.rust]
# deny (not forbid) so test modules can #[allow(unsafe_code)] for env var
# mutation, which became unsafe in Edition 2024. Production code has zero
# unsafe — clippy + CI enforce this.
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Genuinely noisy — module_name_repetitions triggers on idiomatic re-exports
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "allow"
field_reassign_with_default = "allow"
similar_names = "allow"
# Multiple crate versions caused by transitive dependencies (not actionable)
multiple_crate_versions = "allow"

# Cast safety — prevent silent precision/sign/truncation regressions
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"

# Production code quality — deny prevents regression from zero unwrap/expect
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
