[package]
name = "rhizo-crypt-core"
description = "Core DAG Engine - Ephemeral Working Memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["dag", "merkle", "ecoPrimals", "rhizocrypt", "ephemeral"]
categories = ["data-structures", "cryptography"]

[features]
default = ["sled"]
# Enable test utilities (mock clients, etc.) for integration testing
test-utils = []
# Enable Sled persistent storage backend (100% Pure Rust, default)
sled = ["dep:sled"]
# Enable live client connections to sibling primals
# - tarpc for Songbird, LoamSpine
# - HTTP (reqwest) is now always available for capability clients
live-clients = ["dep:tarpc", "dep:futures-util", "dep:bincode", "dep:base64"]

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hashbrown = { workspace = true }
lru = "0.12"
async-trait = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
# Optional storage backends
sled = { version = "0.34.7", optional = true }
# HTTP client for adapters (always available)
reqwest = { version = "0.12", features = ["json"] }
# Optional live client connections
tarpc = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
bincode = { version = "1.3", optional = true }
base64 = { version = "0.22", optional = true }
hex = "0.4.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
bincode = "1.3"
proptest = "1.5"
criterion = { workspace = true }
tempfile = "3.15"

[[bench]]
name = "dag_benchmarks"
harness = false
