[package]
name = "rhizo-crypt-core"
description = "Core DAG Engine - Ephemeral Working Memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["dag", "merkle", "ecoPrimals", "rhizocrypt", "ephemeral"]
categories = ["data-structures", "cryptography"]

[features]
default = ["redb"]
# Enable test utilities (mock clients, etc.) for integration testing
test-utils = []
# Enable Sled persistent storage backend (uses libc for file locking)
sled = ["dep:sled"]
# Enable redb persistent storage backend (100% Pure Rust, default)
redb = ["dep:redb"]
# Enable HTTP clients (reqwest) for direct REST API calls.
# NOT needed for Tower Atomic pattern (Unix socket IPC).
# Pulls in ring (C/asm) via rustls — disable for pure Rust builds.
http-clients = ["dep:reqwest"]
# Enable live client connections to sibling primals
# - tarpc for Songbird, LoamSpine
# - HTTP (reqwest) for legacy REST clients
live-clients = ["dep:tarpc", "dep:futures-util", "dep:bincode", "dep:base64", "http-clients"]

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hashbrown = { workspace = true }
lru = "0.12"
async-trait = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
# Optional storage backends
sled = { version = "0.34.7", optional = true }
redb = { workspace = true, optional = true }
# Optional: HTTP client for direct REST API calls (legacy path).
# Pulls in ring (C/asm) via rustls — use Unix socket IPC instead (Tower Atomic).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
# Optional live client connections
tarpc = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
bincode = { version = "1.3", optional = true }
base64 = { version = "0.22", optional = true }
hex = "0.4.3"

# Provenance trio canonical wire types
provenance-trio-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
bincode = "1.3"
redb = { workspace = true }
proptest = "1.5"
criterion = { workspace = true }
tempfile = "3.15"
temp-env.workspace = true
wiremock = "0.6"

[[bench]]
name = "dag_benchmarks"
harness = false
