[package]
name = "rhizo-crypt-core"
description = "Core DAG Engine - Ephemeral Working Memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["dag", "merkle", "ecoPrimals", "rhizocrypt", "ephemeral"]
categories = ["data-structures", "cryptography"]

[features]
default = ["redb"]
# Enable test utilities (mock clients, etc.) for integration testing
test-utils = []
# Enable redb persistent storage backend (100% Pure Rust, default)
redb = ["dep:redb"]
# Enable HTTP clients (hyper/tower) for direct REST API calls.
# Pure Rust — no ring, no C deps.
http-clients = ["dep:hyper", "dep:hyper-util", "dep:http-body-util"]
# Enable live client connections to sibling primals
# - tarpc for Songbird, LoamSpine
# - HTTP (hyper) for REST clients
live-clients = ["dep:tarpc", "dep:futures-util", "dep:bincode", "dep:base64", "http-clients"]

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
# Optional storage backends
redb = { workspace = true, optional = true }
# Optional: HTTP client (pure Rust hyper/tower stack)
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
# Optional live client connections
tarpc = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
hex = "0.4.3"


[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
bincode = { workspace = true }
redb = { workspace = true }
proptest = "1.5"
criterion = { workspace = true }
tempfile = "3.15"
temp-env.workspace = true
wiremock = "0.6"

[[bench]]
name = "dag_benchmarks"
harness = false
