[package]
name = "rhizo-crypt-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure Rust RPC layer for rhizoCrypt using tarpc"
readme = "../rhizo-crypt-core/README.md"
keywords = ["dag", "rpc", "tarpc", "distributed", "ephemeral"]
categories = ["network-programming", "asynchronous", "cryptography"]

[dependencies]
# Core library (default redb backend)
rhizo-crypt-core = { path = "../rhizo-crypt-core", default-features = true }

# Async
tokio.workspace = true
futures-util.workspace = true

# Pure Rust RPC - compile-time type safety
tarpc.workspace = true

# Serialization (for tarpc transport)
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
bytes.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# HTTP (JSON-RPC server)
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper = { workspace = true }
hyper-util = { workspace = true }
hex = "0.4"
base64 = "0.22"
uuid = { workspace = true }
dashmap = { workspace = true }

# BTSP Phase 2 — handshake crypto (Pure Rust, ecoBin-compliant)
x25519-dalek = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# BTSP Phase 3 — encrypted channel (ChaCha20-Poly1305 AEAD, Pure Rust)
chacha20poly1305 = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tracing-subscriber.workspace = true
temp-env.workspace = true
tempfile = "3"
proptest = "1.5"

[lints]
workspace = true

