[package]
name = "rhizocrypt-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone RPC service for rhizoCrypt - Ephemeral DAG Engine"
keywords = ["dag", "ephemeral", "rpc", "primal", "ecoprimal"]
categories = ["cryptography", "network-programming", "data-structures"]

[[bin]]
name = "rhizocrypt"
path = "src/main.rs"

[dependencies]
rhizo-crypt-core = { path = "../rhizo-crypt-core" }
rhizo-crypt-rpc = { path = "../rhizo-crypt-rpc" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

