[package]
name = "rhizocrypt-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone RPC service for rhizoCrypt - Ephemeral DAG Engine"
keywords = ["dag", "ephemeral", "rpc", "primal", "ecoprimal"]
categories = ["cryptography", "network-programming", "data-structures"]

[features]
default = ["redb", "live-clients"]
redb = ["rhizo-crypt-core/redb"]
live-clients = ["rhizo-crypt-core/live-clients"]

[lib]
name = "rhizocrypt_service"
path = "src/lib.rs"

[[bin]]
name = "rhizocrypt"
path = "src/main.rs"

[[test]]
name = "service_integration"
path = "tests/service_integration/mod.rs"

[dependencies]
rhizo-crypt-core = { path = "../rhizo-crypt-core" }
tempfile = { workspace = true }
thiserror = { workspace = true }
rhizo-crypt-rpc = { path = "../rhizo-crypt-rpc" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
temp-env.workspace = true

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

